--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-popover-view": "^5.1.8",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-webview": "^13.8.1",
+    "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
