Fix refresh bug, press outside to close popover

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 screens/Detail.tsx
+screens/Bookmarks.tsx
+utils/database
+utils/checkBookmarkStatus.ts
+utils/rssHandler.ts
+react-native.config.js
+
+
 
 
 # OSX
