--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "dotenv": "^16.4.5",
     "firebase": "^10.9.0",
+    "i18next": "^23.11.0",
     "javascript-time-ago": "^2.5.9",
     "react": "18.2.0",
+    "react-i18next": "^14.1.0",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-popover-view": "^5.1.8",
