--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
