--- a/package.json
+++ b/package.json
@@ -22,16 +22,24 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "dotenv": "^16.4.5",
     "firebase": "^10.9.0",
+    "i18next": "^23.11.0",
     "javascript-time-ago": "^2.5.9",
     "react": "18.2.0",
+    "react-i18next": "^14.1.0",
     "react-native": "0.73.5",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-popover-view": "^5.1.8",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-share": "^10.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-webview": "^13.8.1",
-    "react-redux": "^9.1.0"
+    "react-native-webview": "^13.8.4",
+    "react-redux": "^9.1.0",
+    "vasern": "^0.3.68"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
